# yopass_api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tools.yml
example/: example.py
tests/: test_yopass_api.py
yopass_api/: __init__.py  yopass_api.py
